<?php

namespace App\Controller;

use App\Entity\Task;
use App\Entity\User;
use App\Form\TaskType;
use Doctrine\Persistence\ManagerRegistry;
use Symfony\Component\HttpFoundation\RedirectResponse;
use Symfony\Component\Routing\Annotation\Route;
use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
use Symfony\Component\HttpFoundation\Request;
use Symfony\Component\HttpFoundation\Response;
use Symfony\Component\Security\Http\Attribute\CurrentUser;
use Symfony\Component\Security\Http\Attribute\IsGranted;

class TaskController extends AbstractController
{
    private $doctrine;

    public function __construct(ManagerRegistry $doctrine)
    {
        $this->doctrine = $doctrine;
    }

    #[Route('/tasks/to-do', name: 'task_to_do')]
    public function getToDoList(): Response
    {
        return $this->render(
            'task/list.html.twig',
            ['tasks' => $this->doctrine->getRepository(Task::class)->findBy(['isDone' => false], ['createdAt' => 'DESC'])]
        );
    }

    #[Route('/tasks/done', name: 'task_done')]
    public function getDoneList(): Response
    {
        return $this->render(
            'task/list.html.twig',
            ['tasks' => $this->doctrine->getRepository(Task::class)->findBy(['isDone' => true], ['createdAt' => 'DESC'])]
        );
    }

    #[Route('/tasks/create', name: 'task_create')]
    public function createAction(Request $request, #[CurrentUser] ?User $user): RedirectResponse|Response
    {
        $task = new Task();
        $form = $this->createForm(TaskType::class, $task);

        $form->handleRequest($request);

        if ($form->isSubmitted() && $form->isValid()) {
            $em = $this->doctrine->getManager();
            $task->author = $user;
            $em->persist($task);
            $em->flush();

            $this->addFlash('success', 'La tâche a été bien été ajoutée.');

            return $this->redirectToRoute('task_to_do');
        }
        if ($form->isSubmitted() && !$form->isValid()) {
            return $this->render('task/create.html.twig', [
                'form' => $form->createView(),
            ], new Response('', Response::HTTP_UNPROCESSABLE_ENTITY));
        }
        return $this->render('task/create.html.twig', ['form' => $form->createView()]);
    }

    #[Route('/tasks/{id}/edit', name: 'task_edit')]
    public function editAction(Task $task, Request $request): RedirectResponse|Response
    {
        $form = $this->createForm(TaskType::class, $task);

        $form->handleRequest($request);

        if ($form->isSubmitted() && $form->isValid()) {
            $this->doctrine->getManager()->flush();

            $this->addFlash('success', 'La tâche a bien été modifiée.');

            return $this->redirectToRoute('task_to_do');
        }

        return $this->render('task/edit.html.twig', [
            'form' => $form->createView(),
            'task' => $task,
        ]);
    }

    #[Route('/tasks/{id}/toggle', name: 'task_toggle')]
    public function toggleTaskAction(Task $task): RedirectResponse
    {
        $task->toggle(!$task->isDone());
        $this->doctrine->getManager()->persist($task);
        $this->doctrine->getManager()->flush();

        $this->addFlash('success', sprintf('La tâche %s a bien été marquée comme faite.', $task->getTitle()));

        return $this->redirectToRoute('task_to_do');
    }

    #[Route('/tasks/{id}/delete', name: 'task_delete')]
    #[IsGranted('delete', 'task')]
    public function deleteTaskAction(Task $task): RedirectResponse
    {
        $em = $this->doctrine->getManager();
        $em->remove($task);
        $em->flush();

        $this->addFlash('success', 'La tâche a bien été supprimée.');

        return $this->redirectToRoute('task_to_do');
    }
}
